--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.0.1.RELEASE'
+    testImplementation("org.junit.vintage:junit-vintage-engine") {    exclude group: "org.hamcrest", module: "hamcrest-core"}
 
 }
 
