--- a/appspec.yml
+++ b/appspec.yml
@@ -3,9 +3,9 @@ os: linux
 
 files:
   - source: /
-    destination: /opt/testapp
+    destination: /opt/minipro
 permissions:
-  - object: /opt/testapp/
+  - object: /opt/minipro/
     owner: ubuntu
     group: ubuntu
     mode: 755
